--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "jose": "^5.10.0",
     "mongoose": "^8.10.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "skia-canvas": "^2.0.2"
+    "react-dom": "^19.0.0"
   }
 }
