--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -6,6 +6,8 @@ on:
   push:
     branches:
       - main
+    tags:
+      - "v*"
 
 jobs:
   build:
@@ -23,6 +25,7 @@ jobs:
       - name: Build Project
         run: bunx nitro build
   deployment:
+    if: startsWith(github.ref, 'refs/tags/')
     name: Deploy
     needs: [build]
     runs-on: ubuntu-latest
