--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -38,7 +38,7 @@ jobs:
         run: |
           TAG_NAME="${GITHUB_REF#refs/tags/}"
           if [[ "$TAG_NAME" == staging-v* ]]; then
-            echo "DEPLOY_ENV=staging" >> $GITHUB_ENV
+            echo "DEPLOY_ENV=preview" >> $GITHUB_ENV
           elif [[ "$TAG_NAME" == prod-v* ]]; then
             echo "DEPLOY_ENV=production" >> $GITHUB_ENV
           else
