--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "build": "nitro build",
     "dev": "nitro dev",
     "prepare": "nitro prepare",
-    "preview": "node .output/server/index.mjs"
+    "preview": "bun run .output/server/index.mjs"
   },
   "devDependencies": {
     "nitropack": "latest"
